--- a/4.Method.md
+++ b/4.Method.md
@@ -14,6 +14,20 @@ EASEL is a pipeline that relies on several methods and subworkflows. Here, each 
 
 ![](files/figs/easel_pipeline_Nov22.png)
 
+## Nextflow cascade
+
+The `nextflow.sh` calls on `main.nf` to start EASEL. `main.nf` contains the nextflow command, paths to files, and options that can be set during a run. `main.nf` calls on workflows in the `./workflows` directory, specifically the `main_workflow.nf`. The `main_workflow.nf` includes subworkflows that initate data gathering, transcriptome assemlbies with psiclass and stringtie2, workflows leading to AUGUSTUS predictions, prediction filtering, and finally summary statistics on predictions.
+
+Subworkflow statements in `main_workflow.nf`
+
+```
+include { data_input } from '../subworkflows/data_preparation.nf'
+include { assembly_psiclass } from '../subworkflows/psiclass.nf'
+include { assembly_stringtie2 } from '../subworkflows/stringtie2.nf'
+include { stringtie2_psiclass } from '../subworkflows/filter_predictions.nf'
+include { summary_stats } from '../subworkflows/quality_metrics.nf'
+```
+
 
 ## Data Gathering
 
@@ -21,7 +35,20 @@ Gene model predictions are primarity generated through aligning transcriptomic d
 - soft-masked reference genome (.fa)
 - Paired-end RNA-Seq reads (SRA accession numbers or as .fastq)
 
-For the workshop we'll be using the Boxelder chromosome 1 ([data/genome/acer_negundo_chr1.fa](data/genome/acer_negundo_chr1.fa)) as the reference genome. 
+### nf: reads
+
+Gather your reads from 
+
+```
+    withLabel: reads {
+        module = '/isg/shared/modulefiles/fastp/0.23.2:/isg/shared/modulefiles/sratoolkit/2.11.3'
+        executor = 'slurm'
+        clusterOptions = '--qos=general'
+        memory = '10G' 
+        cpus = '4'
+        queue = 'general'
+    }
+```
 
 ## Training and initial gene model prediction
 
